istio/routing_alphav2/app-ingress.yaml
---
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: amazin-gateway
  labels:
    app: amazin-gateway
  annotations:
    kubernetes.io/ingress.class: "istio"
spec:
  rules:
  - http:
      paths:
      - path: /products/.*
        backend:
          serviceName: inventory
          servicePort: 8080
      - path: /user/.*
        backend:
          serviceName: user
          servicePort: 8080
      - path: /basket/.*
        backend:
          serviceName: basket
          servicePort: 8080
